refactor: ortak Kafka retry/DLQ politikasi, HTTP timeout'lari ve controller'lardan SQL ayrimi
Kafka hata yonetimi yalnizca processing-service'te tanimliydi; gateway ve
notification listener'lari container varsayilaniyla calisiyordu: ayni kaydi
sonsuza kadar yeniden dene, arkasindaki partition'i durdur. Politika
vts-common'a bir auto-configuration olarak tasindi, boylece bir servis onu
yeniden tanimlamayi hatirlayarak degil, vts-common'a bagli olarak kazaniyor.

Asil kusur daha derindeydi: hicbir config ErrorHandlingDeserializer
kullanmiyordu. Bozuk bir payload consumer'in poll dongusunde patliyor, orada
hicbir error handler onu goremiyor -- yani processing-service'in DLQ'su bile
poison-pill'e karsi calismiyordu. Deserializer artik sarmalanmis durumda.

DLQ yonlendirmesi Topics.dlqFor() ile tek noktada: <topic>.dlq. telemetry.raw
istisnasi (telemetry.dlq'ya gider) burada korunuyor, boylece tek bir paylasilan
error handler her topic icin dogru kaliyor. Yeni DLQ topic'leri kafka-init'e
eklendi; gateway'e DLQ yazimi icin producer verildi.

Her iki RestClient da timeout'suz kuruluyordu. Yanit vermeyen bir simulator,
operator isteginin servlet thread'ini suresiz tutar ve yeterince cogu gateway'in
havuzunu tuketir -- canli haritayi de birlikte goturur. Timeout'lar acikca
verildi; gateway'in RestClient'i controller kurucusundan config'e tasindi.

ReportingController ve ViolationController ham SQL tutuyordu. Sorgular
repository'ye alindi. PostGIS/Timescale'e ozgu olduklari icin JPA'ya
zorlanmadilar; JdbcTemplate tabanli sorgu sinifi olarak duruyorlar ve entity
yerine dogrudan DTO'ya map ediliyorlar -- bu satir sekillerinin entity'si yok.

Map<String,Object> yerine tipli record'lar bir hatayi da kapatiyor: telemetry ve
trip route uclari Map.of() kullaniyordu, ki null degerde NPE atar -- max_speed_kmh
veya speed_kmh null olan bir kayitta bu ucler 500 donerdi.