@@ -1,7 +1,10 @@
 package com.fleet.vts.gateway.web;
 
+import com.fleet.vts.gateway.repository.ViolationQueryRepository;
 import com.fleet.vts.gateway.security.CurrentUser;
-import org.springframework.jdbc.core.JdbcTemplate;
+import com.fleet.vts.gateway.web.dto.CursorPage;
+import com.fleet.vts.gateway.web.dto.ViolationDto;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -10,117 +13,87 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.http.ResponseEntity;
 
 import java.time.Instant;
 import java.time.OffsetDateTime;
-import java.time.ZoneOffset;
-import java.util.ArrayList;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 /**
  * Violation queries with keyset (cursor) pagination over the hypertable, ordered
  * by (occurred_at, id) descending. Filters: date range, vehicle, rule, severity.
+ *
+ * <p>The queries live in {@link ViolationQueryRepository}. What stays here is the transport
+ * concern the repository has no business knowing about: the opaque cursor, which is just
+ * the last row's {@code (occurred_at, id)} encoded so callers cannot meaningfully tamper
+ * with a position they should treat as a token.
  */
 @RestController
 @RequestMapping("/api/v1/violations")
 public class ViolationController {
 
-    public record ViolationView(Long id, Long vehicleId, Long driverId, String ruleCode, String type,
-                                String severity, Instant occurredAt, Double value, Double threshold,
-                                Double lat, Double lon) {
-    }
+    private static final int MAX_PAGE_SIZE = 200;
 
-    public record Page(List<ViolationView> items, String nextCursor) {
-    }
+    private final ViolationQueryRepository violations;
 
-    private final JdbcTemplate jdbc;
-
-    public ViolationController(JdbcTemplate jdbc) {
-        this.jdbc = jdbc;
+    public ViolationController(ViolationQueryRepository violations) {
+        this.violations = violations;
     }
 
     @GetMapping
-    public Page list(@AuthenticationPrincipal Jwt jwt,
-                     @RequestParam(required = false) Instant from,
-                     @RequestParam(required = false) Instant to,
-                     @RequestParam(required = false) Long vehicleId,
-                     @RequestParam(required = false) String ruleCode,
-                     @RequestParam(required = false) String severity,
-                     @RequestParam(required = false) String cursor,
-                     @RequestParam(defaultValue = "50") int limit) {
-        StringBuilder sql = new StringBuilder(
-                "SELECT id, vehicle_id, driver_id, rule_code, type, severity, occurred_at, value, threshold, "
-                        + "ST_Y(location::geometry) AS lat, ST_X(location::geometry) AS lon "
-                        + "FROM violation WHERE tenant_id = ?");
-        List<Object> args = new ArrayList<>();
-        args.add(CurrentUser.tenantId(jwt));
-        if (from != null) {
-            sql.append(" AND occurred_at >= ?");
-            args.add(OffsetDateTime.ofInstant(from, ZoneOffset.UTC));
-        }
-        if (to != null) {
-            sql.append(" AND occurred_at < ?");
-            args.add(OffsetDateTime.ofInstant(to, ZoneOffset.UTC));
-        }
-        if (vehicleId != null) {
-            sql.append(" AND vehicle_id = ?");
-            args.add(vehicleId);
-        }
-        if (ruleCode != null) {
-            sql.append(" AND rule_code = ?");
-            args.add(ruleCode);
-        }
-        if (severity != null) {
-            sql.append(" AND severity = ?");
-            args.add(severity);
-        }
-        if (cursor != null) {
-            String[] parts = new String(Base64.getUrlDecoder().decode(cursor)).split(":");
-            sql.append(" AND (occurred_at, id) < (?, ?)");
-            args.add(OffsetDateTime.ofInstant(Instant.ofEpochMilli(Long.parseLong(parts[0])), ZoneOffset.UTC));
-            args.add(Long.parseLong(parts[1]));
-        }
-        int capped = Math.min(Math.max(limit, 1), 200);
-        sql.append(" ORDER BY occurred_at DESC, id DESC LIMIT ?");
-        args.add(capped + 1);
+    public CursorPage<ViolationDto> list(@AuthenticationPrincipal Jwt jwt,
+                                         @RequestParam(required = false) Instant from,
+                                         @RequestParam(required = false) Instant to,
+                                         @RequestParam(required = false) Long vehicleId,
+                                         @RequestParam(required = false) String ruleCode,
+                                         @RequestParam(required = false) String severity,
+                                         @RequestParam(required = false) String cursor,
+                                         @RequestParam(defaultValue = "50") int limit) {
+        int capped = Math.clamp(limit, 1, MAX_PAGE_SIZE);
+        Cursor decoded = Cursor.decode(cursor);
 
-        List<ViolationView> rows = jdbc.query(sql.toString(), (rs, n) -> new ViolationView(
-                rs.getLong("id"), rs.getLong("vehicle_id"), (Long) rs.getObject("driver_id"),
-                rs.getString("rule_code"), rs.getString("type"), rs.getString("severity"),
-                rs.getObject("occurred_at", OffsetDateTime.class).toInstant(),
-                toDouble(rs.getObject("value")), toDouble(rs.getObject("threshold")),
-                toDouble(rs.getObject("lat")), toDouble(rs.getObject("lon"))), args.toArray());
+        // One extra row: its presence is how we know a further page exists.
+        var query = new ViolationQueryRepository.PageQuery(
+                CurrentUser.tenantId(jwt), from, to, vehicleId, ruleCode, severity,
+                decoded.occurredAt(), decoded.id(), capped + 1);
+        List<ViolationDto> rows = violations.findPage(query);
 
-        String nextCursor = null;
-        if (rows.size() > capped) {
-            ViolationView last = rows.get(capped - 1);
-            rows = rows.subList(0, capped);
-            nextCursor = Base64.getUrlEncoder().withoutPadding().encodeToString(
-                    (last.occurredAt().toEpochMilli() + ":" + last.id()).getBytes());
+        if (rows.size() <= capped) {
+            return new CursorPage<>(rows, null);
         }
-        return new Page(rows, nextCursor);
-    }
-
-    /** NUMERIC columns arrive as BigDecimal; normalise to Double (null-safe). */
-    private static Double toDouble(Object value) {
-        return value == null ? null : ((Number) value).doubleValue();
+        ViolationDto last = rows.get(capped - 1);
+        return new CursorPage<>(rows.subList(0, capped), Cursor.encode(last));
     }
 
     @PostMapping("/{id}/ack")
     public ResponseEntity<Map<String, Object>> ack(@AuthenticationPrincipal Jwt jwt, @PathVariable Long id) {
         long tenant = CurrentUser.tenantId(jwt);
-        List<OffsetDateTime> occurred = jdbc.queryForList(
-                "SELECT occurred_at FROM violation WHERE id = ? AND tenant_id = ?",
-                OffsetDateTime.class, id, tenant);
-        if (occurred.isEmpty()) {
+        Optional<OffsetDateTime> occurredAt = violations.findOccurredAt(id, tenant);
+        if (occurredAt.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
-        jdbc.update("INSERT INTO violation_ack (tenant_id, violation_id, violation_occurred_at, acked_by) "
-                        + "VALUES (?, ?, ?, ?) ON CONFLICT (violation_id) DO NOTHING",
-                tenant, id, occurred.get(0), CurrentUser.userId(jwt));
+        violations.insertAck(tenant, id, occurredAt.get(), CurrentUser.userId(jwt));
         return ResponseEntity.ok(Map.of("violationId", id, "acked", true));
+    }
+
+    /** The keyset position a cursor carries; both fields null means "first page". */
+    private record Cursor(Instant occurredAt, Long id) {
+
+        private static final Cursor FIRST_PAGE = new Cursor(null, null);
+
+        static Cursor decode(String encoded) {
+            if (encoded == null) {
+                return FIRST_PAGE;
+            }
+            String[] parts = new String(Base64.getUrlDecoder().decode(encoded)).split(":");
+            return new Cursor(Instant.ofEpochMilli(Long.parseLong(parts[0])), Long.parseLong(parts[1]));
+        }
+
+        static String encode(ViolationDto last) {
+            String raw = last.occurredAt().toEpochMilli() + ":" + last.id();
+            return Base64.getUrlEncoder().withoutPadding().encodeToString(raw.getBytes());
+        }
     }
 }
